# insa

./: .gitignore
.github/workflows/: python-test.yml
prednaska2/: Dockerfile
prednaska3/: cross_validation.py  feature_selection.py  pipeline_example.py  processors.py  train_test_split.py
prednaska4/: README.md  pyproject.toml
prednaska4/src/iris_predictor/: config.py  data_manager.py  train_pipeline.py
prednaska4/src/uui_iris_predictor/: config.py  data_manager.py  processors.py  train_pipeline.py
prednaska4/tests/: test_pipeline.py  test_processors.py
prednaska4/tests/data/: test1_input.csv
prednaska5/: pyproject.toml
prednaska5/src/uui_iris_predictor/: config.py  data_manager.py  data_model.py  endpoint.py
prednaska5/tests/: test_data_model.py  test_endpoint.py
prednaska5/tests/data/: test1_output.csv
prednaska6/: Dockerfile  README.md  compose.yml  pyproject.toml
prednaska6/ansible/: ansible.cfg  hosts  install-docker.yml
prednaska6/conf/: iris_predictor_dashboard.json  prometheus.yml
prednaska6/src/uui_iris_predictor/: __init__.py  config.py  data_model.py  endpoint.py  metrics.py  test_client.py  train_pipeline.py
prednaska6/terraform/: README.md  main.tf
prednaska6/tests/: test_data_model.py  test_endpoint.py  test_processors.py
