[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "uui-iris-predictor"
version = "0.1.1"
dependencies = [
  "scikit-learn==1.8.*",
  "pandas>=3.0.0,<3.1.0",
  "joblib>=1.5.0,<1.6.0",
]
requires-python = ">=3.11"
authors = [
  {name = "Peter Bednar"},
]
description = "Iris predictor"
readme = "README.md"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "build",
    "twine"
]

[project.urls]
Homepage = "https://github.com/peterbednar/insa"
Repository = "https://github.com/peterbednar/insa.git"
"Bug Tracker" = "https://github.com/peterbednar/insa/issues"
