[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "uui-iris-predictor"
dynamic = ["version"]
dependencies = [
  "scikit-learn>=1.8.0,<2.0.0",
  "pandas>=3.0.0,<4.0.0",
  "joblib>=1.5.0,<2.0.0",
  "fastapi>=0.135.0,<1.0.0",
  "uvicorn>=0.42.0,<1.0.0",
]
requires-python = ">=3.11"
authors = [
  {name = "Peter Bednar"},
]
description = "Iris predictor"
readme = "README.md"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
    "build",
    "twine"
]

[project.urls]
Homepage = "https://github.com/peterbednar/insa"
Repository = "https://github.com/peterbednar/insa.git"
"Bug Tracker" = "https://github.com/peterbednar/insa/issues"

[tool.hatch.version]
path = "src/uui_iris_predictor/version.py"

[tool.hatch.build]
artifacts = ["src/uui_iris_predictor/trained_models/*.pkl"]
